# corvusdb

./: .gitignore  INSTALL.md  MANUAL_INTERNO.md  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.node.tsbuildinfo  vite.config.js
.github/workflows/: release.yml
data/: connections.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: connections.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  desktop_commands.rs  error.rs  main.rs  models.rs  mongodb_service.rs  storage.rs
